rotas no swagger e correções para uso de injections
