# src/modules/cars/useCases/listSpecifications/ListSpecificationsController.ts
@@ -1,13 +1,12 @@
+import { container } from "tsyringe";
 import { ListSpecificationsUseCase } from "./ListSpecificationsUseCase";
 import { Request, Response } from "express";
 
 class ListSpecificationsController {
 
-    constructor(private listSpecificationsUseCase: ListSpecificationsUseCase) {
-    }
-
-    handle(request: Request, response: Response) {
-        const specifications = this.listSpecificationsUseCase.execute();
+    async handle(request: Request, response: Response) {
+        const listSpecificationsUseCase = container.resolve(ListSpecificationsUseCase);
+        const specifications = await listSpecificationsUseCase.execute();
         return response.status(200).json(specifications);
     }
 
