# src/routes/specifications.routes.ts
@@ -2,17 +2,17 @@ import { response, Router } from "express";
 import { SpecificationsRepository } from "../modules/cars/repositories/implementations/SpecificationsRepository";
 //import { listSpecificationsController } from "../modules/cars/useCases/listSpecifications";
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecifications/ListSpecificationsController";
 
 
 const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
 const specificationsRoutes = Router();
 
 specificationsRoutes.post("/", createSpecificationController.handle);
 
-// specificationsRoutes.get("/", (request, response) => {
-//     return listSpecificationsController.handle(request, response);
-// })
+specificationsRoutes.get("/", listSpecificationsController.handle);
 
 
 export { specificationsRoutes };
